--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "@types/google-protobuf": "^3.15.5",
     "@types/mathjs": "^9.4.2",
     "@walletconnect/web3-provider": "^1.7.0",
-    "@weswap-fe/common": "^0.1.0",
     "antd": "^4.16.13",
     "axios": "^0.21.1",
     "bnc-notify": "^1.5.0",
@@ -47,10 +46,12 @@
     "ethers": "^5.1.0",
     "google-protobuf": "^3.19.1",
     "grpc-web": "^1.3.0",
+    "immutable": "^4.1.0",
     "isomorphic-fetch": "^3.0.0",
     "js-sha3": "^0.8.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
+    "next": "^12.3.1",
     "numeral": "^2.0.6",
     "object-byte-converter": "^0.0.6",
     "qrcode.react": "^1.0.1",
